<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. Viktor Pop
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".raw.motion.GyroscopeDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/measureSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/screen_padding"
                android:text="@string/details_start_listening"
                android:textSize="@dimen/app_switch_text_size" />

            <TextView
                android:id="@+id/sensorDataLabelView"
                style="@style/App.Section.RawDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_details_label_data" />

            <TextView
                android:id="@+id/sensorValueLabelView"
                style="@style/App.Label.RawDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_details_data_label_values" />

            <com.reboot297.sensors.lib.view.GyroscopeValueView
                android:id="@+id/sensor_value_view"
                style="@style/App.Value.RawDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                tools:text="" />

            <TextView
                android:id="@+id/sensorAccuracyLabelView"
                style="@style/App.Label.RawDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_details_data_label_accuracy" />

            <com.reboot297.sensors.lib.view.AccuracyView
                android:id="@+id/sensor_accuracy_view"
                style="@style/App.Value.RawDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                tools:text="" />

            <TextView
                android:id="@+id/sensorInfoLabelView"
                style="@style/App.Section.RawDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_details_label_info" />

            <com.reboot297.sensors.lib.view.SensorInfoLayout
                android:id="@+id/sensor_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/sensor_description_label_view"
                style="@style/App.Section.RawDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_details_label_description" />

            <com.reboot297.sensors.lib.view.DescriptionView
                android:id="@+id/sensor_description_view"
                style="@style/App.Value.RawDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/description_gyroscope" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>