<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. Viktor Pop
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".orientation.DeviceOrientationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/measureSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_start_listening"
                android:textSize="@dimen/app_switch_text_size"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calculated_data_label_view"
                style="@style/App.Sample.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orientation_calculated_label"
                app:layout_constraintTop_toBottomOf="@+id/measureSwitch" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/calculated_value_view"
                style="@style/App.Sample.Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/calculated_data_label_view"
                tools:text="" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/orientation_description_view"
                style="@style/App.Sample.Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/orientation_description_value"
                app:layout_constraintTop_toBottomOf="@+id/calculated_value_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>